--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Add the Permissions-Policy meta tag -->
-    <meta http-equiv="Permissions-Policy" content="interest-cohort=()" />
     <meta name="description"
         designation="View my professional work and achievements showcased on my personal portfolio page">
     <title>Achint Tyagi</title>
@@ -222,7 +220,7 @@
 
                         <div class="skill">
                             <div class="skill-name">
-                                <img src="Assests/Images/004-python.png">
+                                <img src="Assests/Images/python.svg">
                                 <h5>Python</h5>
                             </div>
                             <div class="skill-progress">
@@ -234,7 +232,7 @@
 
                         <div class="skill">
                             <div class="skill-name">
-                                <img src="Assests/Images/002-javascript.png">
+                                <img src="Assests/Images/javascript.svg">
                                 <h5>JavaScript</h5>
                             </div>
                             <div class="skill-progress">
@@ -246,19 +244,19 @@
 
                         <div class="skill">
                             <div class="skill-name">
-                                <img src="Assests/Images/php.png">
+                                <img src="Assests/Images/php.svg">
                                 <h5>PhP</h5>
                             </div>
                             <div class="skill-progress">
-                                <span class="progres" data-value="70%" style="width: 70%;"></span>
+                                <span class="progres" data-value="50%" style="width: 50%;"></span>
                             </div>
-                            <span class="value">70%</span>
+                            <span class="value">50%</span>
                         </div>
 
 
                         <div class="skill">
                             <div class="skill-name">
-                                <img src="Assests/Images/005-html-5.png">
+                                <img src="Assests/Images/html5.svg">
                                 <h5>HTML</h5>
                             </div>
                             <div class="skill-progress">
@@ -270,7 +268,7 @@
 
                         <div class="skill">
                             <div class="skill-name">
-                                <img src="Assests/Images/003-css-3.png">
+                                <img src="Assests/Images/css.svg">
                                 <h5>CSS</h5>
                             </div>
                             <div class="skill-progress">
@@ -282,7 +280,7 @@
 
                         <div class="skill">
                             <div class="skill-name">
-                                <img src="Assests/Images/001-bootstrap.png">
+                                <img src="Assests/Images/bootstrap.svg">
                                 <h5>Bootstrap</h5>
                             </div>
                             <div class="skill-progress">
@@ -294,7 +292,7 @@
 
                         <div class="skill">
                             <div class="skill-name">
-                                <img src="Assests/Images/typescript.png">
+                                <img src="Assests/Images/typescriptlang.svg">
                                 <h5>Typescript</h5>
                             </div>
                             <div class="skill-progress">
@@ -305,35 +303,46 @@
 
                         <div class="skill">
                             <div class="skill-name">
-                                <img src="Assests/Images/007-wordpress.png">
+                                <img src="Assests/Images/wordpress.svg">
                                 <h5>WordPress</h5>
-                            </div>
-                            <div class="skill-progress">
-                                <span class="progres" data-value="60%" style="width: 60%;"></span>
-                            </div>
-                            <span class="value">60%</span>
-                        </div>
-
-                        <div class="skill">
-                            <div class="skill-name">
-                                <img src="Assests/Images/008-react.png">
-                                <h5>ReactJS</h5>
-                            </div>
-                            <div class="skill-progress">
-                                <span class="progres" data-value="25%" style="width: 25%;"></span>
-                            </div>
-                            <span class="value">25%</span>
-                        </div>
-
-                        <div class="skill">
-                            <div class="skill-name">
-                                <img src="Assests/Images/006-java.png">
-                                <h5>Java</h5>
                             </div>
                             <div class="skill-progress">
                                 <span class="progres" data-value="50%" style="width: 50%;"></span>
                             </div>
                             <span class="value">50%</span>
+                        </div>
+
+                        <div class="skill">
+                            <div class="skill-name">
+                                <img src="Assests/Images/reactjs.svg">
+                                <h5>ReactJS</h5>
+                            </div>
+                            <div class="skill-progress">
+                                <span class="progres" data-value="35%" style="width: 35%;"></span>
+                            </div>
+                            <span class="value">35%</span>
+                        </div>
+
+                        <div class="skill">
+                            <div class="skill-name">
+                                <img src="Assests/Images/webflow.svg">
+                                <h5>Webflow</h5>
+                            </div>
+                            <div class="skill-progress">
+                                <span class="progres" data-value="45%" style="width: 45%;"></span>
+                            </div>
+                            <span class="value">45%</span>
+                        </div>
+
+                        <div class="skill">
+                            <div class="skill-name">
+                                <img src="Assests/Images/java.svg">
+                                <h5>Java</h5>
+                            </div>
+                            <div class="skill-progress">
+                                <span class="progres" data-value="40%" style="width: 40%;"></span>
+                            </div>
+                            <span class="value">40%</span>
                         </div>
 
                     </div>
@@ -654,12 +663,35 @@
                 View all of my projects
                 <a href="https://github.com/tyagi-achint?tab=repositories" target="_blank">@ Github</a>
             </h1>
+            <li class="card">
+                <img src="./Assests/Images/Resume-Builder.png" alt="">
+                <div class="cardData">
+                    <h3>Resume Builder</h3>
+                    <ul>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>ReactJS</li>
+                    </ul>
+                    <p>
+                        A React.js-based web app for effortlessly creating and customizing
+                        professional resumes with a modern and user-friendly interface.
+                    </p>
+                    <div class="projectLinks">
+                        <a target="_blank" href="https://github.com/tyagi-achint/Resume-Builder-ReactJs"
+                            class="card-link">Code</a>
+                        <a target="_blank" href="https://resume-crafter.netlify.app/" class="card-link">Live</a>
+                    </div>
+                </div>
+
+            </li>
+
+
         </div>
     </div>
 
 </body>
 
-<script src="/Assests/Script.js"></script>
+<script src="./Assests/Script.js"></script>
 
 <!-- LordIcon Script -->
 <script src="https://cdn.lordicon.com/lordicon.js"></script>
