--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                 <hr class="textUnderline" />
                 <div class="projectContainer">
                     <li class="card">
-                        <img src="./Assests/Images/Resume-Builder.png" alt="">
+                        <img src="./Assests/Images/Resume-Builder.png">
                         <div class="cardData">
                             <h3>Resume Builder</h3>
                             <ul>
@@ -406,7 +406,7 @@
                         </div>
                     </li>
                     <li class="card">
-                        <img src="/Assests/Images/Weather-App.svg" alt="">
+                        <img src="/Assests/Images/Weather-App.svg">
                         <div class="cardData">
                             <h3>Weather App</h3>
                             <ul>
@@ -663,8 +663,74 @@
                 View all of my projects
                 <a href="https://github.com/tyagi-achint?tab=repositories" target="_blank">@ Github</a>
             </h1>
+
             <li class="card">
-                <img src="./Assests/Images/Resume-Builder.png" alt="">
+                <img src="./Assests/Images/Project-Manager.svg">
+                <div class="cardData">
+                    <h3>Project Manager</h3>
+                    <ul>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>ReactJS</li>
+                    </ul>
+                    <p>
+                        A React.js-based web app, allows users to manage projects, add tasks to projects, and delete
+                        both projects and tasks. It features a clean and intuitive user interface with different views
+                        for creating new projects, managing tasks within selected projects, and viewing the overall
+                        project list.
+                    </p>
+                    <div class="projectLinks">
+                        <a target="_blank" href="https://github.com/tyagi-achint/Project-Manager-ReactJs"
+                            class="card-link">Code</a>
+                        <a target="_blank" href="https://project-track-manager.netlify.app/" class="card-link">Live</a>
+                    </div>
+                </div>
+
+            </li>
+            <li class="card ">
+                <div class="cardData">
+                    <h3>Reflex Game</h3>
+                    <ul>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>ReactJS</li>
+                    </ul>
+                    <p>
+                        This web application is a fun and challenging game designed to test and improve your reflexes.
+                        The game consists of four levels, each with its own timer. Your objective is to stop the timer
+                        as closely as possible to the designated time to achieve a high score.
+                    </p>
+                    <div class="projectLinks">
+                        <a target="_blank" href="https://github.com/tyagi-achint/Reflex-Game-ReactJs"
+                            class="card-link">Code</a>
+                        <a target="_blank" href="https://react-reflexor.netlify.app/" class="card-link">Live</a>
+                    </div>
+                </div>
+                <img src="/Assests/Images/Reflex-Game.svg">
+            </li>
+            <li class="card">
+                <img src="./Assests/Images/Investment-Calculator.svg">
+                <div class="cardData">
+                    <h3>Investment Calculator</h3>
+                    <ul>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>ReactJS</li>
+                    </ul>
+                    <p>
+                        This web application allows users to calculate the future value of their investments based on
+                        the provided inputs such as initial investment, annual investment, expected return, and
+                        duration.
+                    </p>
+                    <div class="projectLinks">
+                        <a target="_blank" href="https://github.com/tyagi-achint/Investment-Calculator-ReactJs"
+                            class="card-link">Code</a>
+                        <a target="_blank" href="https://fund-forecast.netlify.app/" class="card-link">Live</a>
+                    </div>
+                </div>
+
+            </li>
+            <li class="card">
                 <div class="cardData">
                     <h3>Resume Builder</h3>
                     <ul>
@@ -682,10 +748,243 @@
                         <a target="_blank" href="https://resume-crafter.netlify.app/" class="card-link">Live</a>
                     </div>
                 </div>
-
+                <img src="./Assests/Images/Resume-Builder.png">
             </li>
-
-
+            <li class="card ">
+                <img src="/Assests/Images/Weather-App.svg">
+                <div class="cardData">
+                    <h3>Weather App</h3>
+                    <ul>
+                        <li>Python</li>
+                        <li>Flask</li>
+                        <li>Docker</li>
+                    </ul>
+                    <p>
+                        A simple web application built using Flask that allows users to
+                        check the current weather and forecast for a given city. The
+                        application uses the OpenWeatherMap API to retrieve weather data.
+                    </p>
+                    <div class="projectLinks">
+                        <a target="_blank" href="https://github.com/tyagi-achint/Weather-App" class="card-link">Code</a>
+                    </div>
+                </div>
+            </li>
+            <li class="card">
+                <div class="cardData">
+                    <h3>GitHub Repository Explorer</h3>
+                    <ul>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JavaScript</li>
+                    </ul>
+                    <p>
+                        GitHub Repository Explorer is a web application built using HTML,
+                        CSS, and JavaScript. It provides a user-friendly interface to search
+                        and explore GitHub repositories and users.
+                    </p>
+                    <div class="projectLinks">
+                        <a target="_blank" href="https://github.com/tyagi-achint/ExpenseTracker"
+                            class="card-link">Code</a>
+                        <a target="_blank" href="https://tyagi-achint.github.io/GitHub-Repository-Explorer/"
+                            class="card-link">Live</a>
+                    </div>
+                </div>
+                <img src="./Assests/Images/Github-Explorer.svg">
+            </li>
+            <li class="card ">
+                <img src="/Assests/Images/Password-Generator.svg">
+                <div class="cardData">
+                    <h3>Password Generator</h3>
+                    <ul>
+                        <li>Python</li>
+                        <li>Flask</li>
+                        <li>Docker</li>
+                    </ul>
+                    <p>
+                        This is a simple Flask web application that generates random
+                        passwords based on user input.
+                    </p>
+                    <div class="projectLinks">
+                        <a target="_blank" href="https://github.com/tyagi-achint/Random-Password-Generator"
+                            class="card-link">Code</a>
+                    </div>
+                </div>
+            </li>
+            <li class="card">
+                <div class="cardData">
+                    <h3>Expense Tracker</h3>
+                    <ul>
+                        <li>Python</li>
+                        <li>Flask</li>
+                        <li>JavaScript</li>
+                    </ul>
+                    <p>
+                        A web application built using Flask, a Python web framework, to
+                        track and visualize expenses from a CSV file. The application allows
+                        users to upload a CSV file containing transaction data, performs
+                        data validation and cleaning, and presents a summary of income,
+                        expenses, and a breakdown of expenses by category. The expense data
+                        is visualized using a bar chart, and users can filter the chart
+                        based on predefined amount ranges.
+                    </p>
+                    <div class="projectLinks">
+                        <a target="_blank" href="https://github.com/tyagi-achint/ExpenseTracker"
+                            class="card-link">Code</a>
+                    </div>
+                </div>
+                <img src="./Assests/Images/Expense-Tracker.svg">
+            </li>
+            <li class="card ">
+                <img src="/Assests/Images/forum.svg">
+                <div class="cardData">
+                    <h3>Forum Website</h3>
+                    <ul>
+                        <li>HTML</li>
+                        <li>PHP</li>
+                        <li>JavaScript</li>
+                    </ul>
+                    <p>
+                        Crowdcanvass is an interactive PHP forum website designed for online
+                        community engagement. It offers features like user authentication,
+                        category-based discussions, thread creation, question posting, and
+                        replies. It's a digital platform for knowledge sharing and social
+                        interaction, catering to the needs of the modern online community.
+                    </p>
+                    <div class="projectLinks">
+                        <a target="_blank" href="https://github.com/tyagi-achint/forum_php" class="card-link">Code</a>
+                        <a target="_blank" href="https://crowdcanvass.rf.gd" class="card-link">Live</a>
+                    </div>
+                </div>
+            </li>
+            <li class="card">
+                <div class="cardData">
+                    <h3>Games Website</h3>
+                    <ul>
+                        <li>HTML</li>
+                        <li>PHP</li>
+                        <li>JavaScript</li>
+                    </ul>
+                    <p>
+                        Beat boredom with a captivating website featuring a collection of
+                        entertaining games designed using JavaScript, HTML, and CSS. Dive
+                        into a world of fun and challenge yourself with various interactive
+                        games that will keep you entertained for hours.
+                    </p>
+                    <div class="projectLinks">
+                        <a target="_blank" href="https://github.com/tyagi-achint/php_games_website"
+                            class="card-link">Code</a>
+                        <a target="_blank" href="https://funtimefillers.rf.gd/" class="card-link">Live</a>
+                    </div>
+                </div>
+                <img src="./Assests/Images/games.svg">
+            </li>
+            <li class="card ">
+                <img src="/Assests/Images/notes.svg">
+                <div class="cardData">
+                    <h3>Notes Wepage</h3>
+                    <ul>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JavaScript</li>
+                    </ul>
+                    <p>
+                        A simple and intuitive note-taking webpage designed to help you stay
+                        organized and capture your thoughts effortlessly. This webpage is
+                        built using a combination of JavaScript, HTML, and CSS to provide a
+                        seamless and responsive user experience.
+                    </p>
+                    <div class="projectLinks">
+                        <a target="_blank" href="https://github.com/tyagi-achint/OctaNet_June_Task-2"
+                            class="card-link">Code</a>
+                        <a target="_blank" href="https://tyagi-achint.github.io/OctaNet_June_Task-2/"
+                            class="card-link">Live</a>
+                    </div>
+                </div>
+            </li>
+            <li class="card">
+                <div class="cardData">
+                    <h3>Portfolio Website</h3>
+                    <ul>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                    </ul>
+                    <p>
+                        Welcome to my portfolio website, a showcase of my creative work.
+                        With a clean and visually appealing design, I present my projects
+                        and accomplishments in a professional and captivating manner,
+                        highlighting my skills and expertise.
+                    </p>
+                    <div class="projectLinks">
+                        <a target="_blank" href="https://github.com/tyagi-achint/Portfolio" class="card-link">Code</a>
+                        <a target="_blank" href="https://tyagi-achint.github.io/Portfolio/" class="card-link">Live</a>
+                    </div>
+                </div>
+                <img src="./Assests/Images/Portfolio-Website.svg">
+            </li>
+            <li class="card ">
+                <img src="/Assests/Images/square.svg">
+                <div class="cardData">
+                    <h3>Square of Number</h3>
+                    <ul>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JavaScript</li>
+                    </ul>
+                    <p>
+                        Explore a dynamic JavaScript-powered website that displays the
+                        squares of even numbers up to 40 and provides an interactive box for
+                        you to input any number and instantly see its square value.
+                    </p>
+                    <div class="projectLinks">
+                        <a target="_blank" href="https://github.com/tyagi-achint/Square" class="card-link">Code</a>
+                        <a target="_blank" href="https://tyagi-achint.github.io/Square/" class="card-link">Live</a>
+                    </div>
+                </div>
+            </li>
+            <li class="card">
+                <div class="cardData">
+                    <h3>Yoga Landing Page</h3>
+                    <ul>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                    </ul>
+                    <p>
+                        Welcome to Yoga, a serene and tranquil online sanctuary dedicated to
+                        helping you find balance, peace, and vitality through the practice
+                        of yoga. My landing page, designed using HTML and CSS, invites you
+                        to embark on a transformative journey towards holistic well-being
+                    </p>
+                    <div class="projectLinks">
+                        <a target="_blank" href="https://github.com/tyagi-achint/OctaNet_June_Task-1"
+                            class="card-link">Code</a>
+                        <a target="_blank" href="https://tyagi-achint.github.io/OctaNet_June_Task-1/"
+                            class="card-link">Live</a>
+                    </div>
+                </div>
+                <img src="./Assests/Images/yoga.svg">
+            </li>
+            <li class="card ">
+                <img src="/Assests/Images/clone.svg">
+                <div class="cardData">
+                    <h3>Website Clone</h3>
+                    <ul>
+                        <li>HTML</li>
+                        <li>BootStrap</li>
+                    </ul>
+                    <p>
+                        Discover a stunning website clone built with Bootstrap, CSS, and
+                        HTML. Experience the familiarity of a popular website, recreated
+                        with precision and enhanced with the power of Bootstrap, delivering
+                        style.
+                    </p>
+                    <div class="projectLinks">
+                        <a target="_blank" href="https://github.com/tyagi-achint/bootstrap-website"
+                            class="card-link">Code</a>
+                        <a target="_blank" href="https://tyagi-achint.github.io/bootstrap-website/index.html"
+                            class="card-link">Live</a>
+                    </div>
+                </div>
+            </li>
         </div>
     </div>
 
