--- a/index.html
+++ b/index.html
@@ -657,11 +657,13 @@
     </div>
 
     <div id="ProjectsPopUp">
-        <div class="content">
+        <div class="close-icon">
             <i class="fa-solid fa-circle-xmark" onclick="closeProjectsPopUp()"></i>
+        </div>
+        <div class="content">
             <h1>
                 View all of my projects
-                <a href="https://github.com/tyagi-achint?tab=repositories" target="_blank">@ Github</a>
+                <a href="https://github.com/tyagi-achint?tab=repositories" target="_blank">@_Github</a>
             </h1>
 
             <li class="card">
