--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
     <!-- Architects Daughter -->
     <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet" />
 
+    <!-- Patrick Hand SC -->
+
+    <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand+SC&display=swap" rel="stylesheet">
+
     <!-- Fontawesome  -->
     <script src="https://kit.fontawesome.com/bf027e9367.js" crossorigin="anonymous"></script>
 
