--- a/index.html
+++ b/index.html
@@ -410,17 +410,18 @@
                         </div>
                     </li>
                     <li class="card">
-                        <img src="/Assests/Images/Weather-App.svg">
+                        <img src="./Assests/Images/quiz.png">
                         <div class="cardData">
-                            <h3>Weather App</h3>
+                            <h3>Quizz App</h3>
                             <ul>
-                                <li>Python</li>
-                                <li>Flask</li>
-                                <li>Docker</li>
+                                <li>HTML</li>
+                                <li>CSS</li>
+                                <li>ReactJS</li>
                             </ul>
                             <div class="projectLinks">
-                                <a target="_blank" href="https://github.com/tyagi-achint/Weather-App"
+                                <a target="_blank" href="https://github.com/tyagi-achint/Quiz-App-ReactJs"
                                     class="card-link">Code</a>
+                                <a target="_blank" href="https://smartypants.netlify.app/" class="card-link">Live</a>
                             </div>
                         </div>
                     </li>
@@ -669,7 +670,26 @@
                 View all of my projects
                 <a href="https://github.com/tyagi-achint?tab=repositories" target="_blank">@_Github</a>
             </h1>
+            <li class="card">
+                <img src="./Assests/Images/quiz.png">
+                <div class="cardData">
+                    <h3>Quizz App</h3>
+                    <ul>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>ReactJS</li>
+                    </ul>
+                    <p>
+                        A Quiz web application built using ReactJs.
+                    </p>
+                    <div class="projectLinks">
+                        <a target="_blank" href="https://github.com/tyagi-achint/Quiz-App-ReactJs"
+                            class="card-link">Code</a>
+                        <a target="_blank" href="https://smartypants.netlify.app/" class="card-link">Live</a>
+                    </div>
+                </div>
 
+            </li>
             <li class="card">
                 <img src="./Assests/Images/Project-Manager.svg">
                 <div class="cardData">
