--- a/index.html
+++ b/index.html
@@ -410,20 +410,21 @@
                         </div>
                     </li>
                     <li class="card">
-                        <img src="./Assests/Images/quiz.png">
+                        <img src="./Assests/Images/foodorder.png">
                         <div class="cardData">
-                            <h3>Quizz App</h3>
+                            <h3>Food Ordering App</h3>
                             <ul>
                                 <li>HTML</li>
                                 <li>CSS</li>
                                 <li>ReactJS</li>
                             </ul>
                             <div class="projectLinks">
-                                <a target="_blank" href="https://github.com/tyagi-achint/Quiz-App-ReactJs"
+                                <a target="_blank" href="https://github.com/tyagi-achint/food-order-reactjs"
                                     class="card-link">Code</a>
-                                <a target="_blank" href="https://smartypants.netlify.app/" class="card-link">Live</a>
+                                <a target="_blank" href="https://reactbite.netlify.app/" class="card-link">Live</a>
                             </div>
                         </div>
+
                     </li>
                 </div>
                 <h1 class="viewProjectButton" onclick="openProjectsPopUp()">
@@ -671,7 +672,26 @@
                 <a href="https://github.com/tyagi-achint?tab=repositories" target="_blank">@_Github</a>
             </h1>
             <li class="card">
-                <img src="./Assests/Images/quiz.png">
+                <img src="./Assests/Images/foodorder.png">
+                <div class="cardData">
+                    <h3>Food Ordering App</h3>
+                    <ul>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>ReactJS</li>
+                    </ul>
+                    <p>
+                        A Food ordering web application built using ReactJs.
+                    </p>
+                    <div class="projectLinks">
+                        <a target="_blank" href="https://github.com/tyagi-achint/food-order-reactjs"
+                            class="card-link">Code</a>
+                        <a target="_blank" href="https://reactbite.netlify.app/" class="card-link">Live</a>
+                    </div>
+                </div>
+
+            </li>
+            <li class="card">
                 <div class="cardData">
                     <h3>Quizz App</h3>
                     <ul>
@@ -680,7 +700,8 @@
                         <li>ReactJS</li>
                     </ul>
                     <p>
-                        A Quiz web application built using ReactJs.
+                        This is a simple quiz application built using React. It allows users to take a quiz, view their
+                        results, and restart the quiz.
                     </p>
                     <div class="projectLinks">
                         <a target="_blank" href="https://github.com/tyagi-achint/Quiz-App-ReactJs"
@@ -688,7 +709,7 @@
                         <a target="_blank" href="https://smartypants.netlify.app/" class="card-link">Live</a>
                     </div>
                 </div>
-
+                <img src="./Assests/Images/quiz.png">
             </li>
             <li class="card">
                 <img src="./Assests/Images/Project-Manager.svg">
