--- a/index.html
+++ b/index.html
@@ -681,7 +681,9 @@
                         <li>ReactJS</li>
                     </ul>
                     <p>
-                        A Food ordering web application built using ReactJs.
+                        Welcome to Food Ordering Web App! This project is built using React.js and allows users to
+                        browse a selection of food items, add them to a cart, edit the cart contents, and proceed to
+                        checkout.
                     </p>
                     <div class="projectLinks">
                         <a target="_blank" href="https://github.com/tyagi-achint/food-order-reactjs"
