--- a/index.html
+++ b/index.html
@@ -438,6 +438,17 @@
                 <div class="container">
                     <ul class="cards">
                         <li class="card">
+                            <div class="cardImg" style="background-image: url(Assests/Images/React-Udemy.jpg)">
+                            </div>
+                            <div class="card-content">
+                                <h3>Udemy</h3>
+                                <p>React</p>
+                                <a target="_blank" href="Assests/Certificates/Udemy-Python.pdf"
+                                    class="card-link">View</a>
+                            </div>
+                        </li>
+
+                        <li class="card">
                             <div class="cardImg" style="background-image: url(Assests/Images/octaNet.jpg)">
                             </div>
                             <div class="card-content">
