--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 </head>
 
 <body>
-    <!-- BACKGOUND EFFECT  -->
+    <!-- BACKGROUND EFFECT  -->
 
     <div id="Background-Effect"></div>
 
@@ -322,9 +322,9 @@
                                 <h5>ReactJS</h5>
                             </div>
                             <div class="skill-progress">
-                                <span class="progres" data-value="35%" style="width: 35%;"></span>
+                                <span class="progres" data-value="55%" style="width: 55%;"></span>
                             </div>
-                            <span class="value">35%</span>
+                            <span class="value">55%</span>
                         </div>
 
                         <div class="skill">
