--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <lord-icon src="https://cdn.lordicon.com/fihkmkwt.json" trigger="loop" delay="700"
                         colors="primary:white,secondary:#9ac5f4">
                     </lord-icon>
-                    <span>Pune Maharashtra</span>
+                    <span>Pune, Maharashtra</span>
                 </p>
             </div>
             <div class="data">
@@ -115,8 +115,6 @@
                 <div class="socialLogo">
                     <a href="https://www.linkedin.com/in/achint-tyagi/" target="_blank"><img
                             src="Assets/Images/001-linkedin.png" /></a>
-                    <a href="https://twitter.com/achinttyagi2001" target="_blank"><img
-                            src="Assets/Images/002-twitter.png" /></a>
                     <a href="https://github.com/tyagi-achint" target="_blank">
                         <img src="Assets/Images/003-github.png" /></a>
                 </div>
@@ -134,7 +132,7 @@
                             </li>
                             <li> <img src="Assets/Images/005-reading.png"> I’m currently learning
                                 <b><i>ReactJS,
-                                        Python.</i></b>
+                                        Flutter.</i></b>
                             </li>
                             <li> <img src="Assets/Images/003-collaboration.png"> I’m looking to collaborate in
                                 <b>
