--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
             <div class="designation">
                 <span>[</span>
-                <span class="designationText">Front-end Developer</span>
+                <span class="designationText">Front-end Engineer</span>
                 <span>]</span>
             </div>
         </div>
