--- a/index.html
+++ b/index.html
@@ -191,6 +191,16 @@
                     <hr class="textUnderline">
                     <li class="expItem">
                         <div>
+                            <h3>Frontend Intern</h3>
+                            <h4>Varp Techlabs</h4>
+                        </div>
+                        <h4>JAN 2024-JUN 2024</h4>
+                        <p>I developed responsive web pages using Webflow and enhanced my React skills by working on
+                            dynamic web applications. This experience boosted my technical abilities and adaptability.
+                        </p>
+                    </li>
+                    <li class="expItem">
+                        <div>
                             <h3>Web Developer Intern</h3>
                             <h4>OctaNet</h4>
                         </div>
